--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
-  <head><!-- where all the meta data will go, like and files we need to include -->
-    <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
-  </head>
+<head>
+  <!-- Meta data for character set, viewport, and description -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A simple webpage displaying a CSS-styled rainbow using div elements.">
+  <meta name="author" content="Your Name">
+  <meta name="keywords" content="HTML, CSS, Rainbow, Colors">
+  <title>My Little Rainbow</title>
+  <link rel="stylesheet" type="text/css" href="./main.css" />
+</head>
 
-  <body><!-- the body element is where everything we will see on the page will go -->
-
-    <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
-              </div>
+<body>
+  <!-- Our soon-to-be beautiful rainbow! -->
+  <div id="red"> 
+    <div id="orange">
+      <div id="yellow">
+        <div id="green">
+          <div id="blue">
+            <div id="indigo">
+              <div id="violet"></div> <!-- The grandest child div -->
             </div>
           </div>
         </div>
       </div>
     </div>
-
-  </body>
+  </div>
+</body>
 
 </html>
+
